# LLM-DA

./: .gitignore  Iteration_reasoning.py  README.md  data.py  evaluate.py  grapher.py  params.py  pyproject.toml  rank_rule.py  reasoning.py  rule_application.py  rule_sampler.py  score_functions.py  temporal_walk.py  utils.py
llms/: chatgpt.py
prompt/: iteration_high.json  iteration_low.json
